Update web page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@ by using the type validator.
 you want with the code)
 </ul>
 
+<h2>News</h2>
+<ul>
+<li> <font color="red">2010-06-28: <a href="typevalidator-2010-06-28.tar.bz2">New version</a> released</font>
+</ul>
+
 <h2>Motivational background</h2>
 <ul>
 <li> Minimize risks and cleanup code for validating network messages
@@ -49,6 +54,12 @@ Download latest version of type validator
 <a href="typevalidator-2010-06-28.tar.bz2">here</a>
 or get it from the Git repository: <a href="git://zakalwe.fi/typevalidator">
 git clone git://zakalwe.fi/typevalidator</a>
+
+<p>
+List of releases:
+<ul>
+<li> <a href="typevalidator-2010-06-28.tar.bz2">2010-06-28</a> (<font color="red">newest</font>)
+<li> <a href="typevalidator-2009-10-09.tar.bz2">2009-10-09</a>
 
 <h2>View type validator source code</h2>
 You can view the latest version of type validator source code
