--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ you want with the code)
 
 <h2>News</h2>
 <ul>
-<li> <font color="red">2010-06-28: <a href="typevalidator-2010-06-28.tar.bz2">New version</a> released</font>
+<li> <font color="red">2010-06-28: <a href="../typevalidator/typevalidator-2010-06-28.tar.bz2">New version</a> released</font>
 </ul>
 
 <h2>Motivational background</h2>
@@ -71,15 +71,15 @@ you want with the code)
 
 <h2>Download type validator</h2>
 Download latest version of type validator
-<a href="typevalidator-2010-06-28.tar.bz2">here</a>
-or get it from the Git repository: <a href="git://zakalwe.fi/typevalidator">
-git clone git://zakalwe.fi/typevalidator</a>
+<a href="../typevalidator/typevalidator-2010-06-28.tar.bz2">here</a>
+or get it from the Git repository: <a href="git://zakalwe.fi/bencode-tools">
+git clone git://zakalwe.fi/bencode-tools</a>
 
 <p>
 List of releases:
 <ul>
-<li> <a href="typevalidator-2010-06-28.tar.bz2">2010-06-28</a> (<font color="red">newest</font>)
-<li> <a href="typevalidator-2009-10-09.tar.bz2">2009-10-09</a>
+<li> <a href="../typevalidator/typevalidator-2010-06-28.tar.bz2">2010-06-28</a> (<font color="red">newest</font>)
+<li> <a href="../typevalidator/typevalidator-2009-10-09.tar.bz2">2009-10-09</a>
 
 <h2>View type validator source code</h2>
 You can view the latest version of type validator source code
