Update web page [DOCUMENTATION]

--- a/index.html
+++ b/index.html
@@ -26,7 +26,19 @@ It can simply be used by including
 </pre>
 into your C module and linking the program with '-lbencodetools'.
 
-<h1>Type validator</h1>
+<h2>Download bencode-tools</h2>
+Download latest version of type validator
+<a href="bencode-tools-2011-03-15.tar.bz2">here</a>
+or get it from the Git repository: <a href="git://zakalwe.fi/bencode-tools">
+git clone git://zakalwe.fi/bencode-tools</a>
+
+<p>
+List of releases:
+<ul>
+<li> <a href="bencode-tools-2011-03-15.tar.bz2">bencode-tools-2011-03-15.tar.bz2</a> (<font color="red">newest</font>)
+</ul>
+
+<h1>Type validator (The Python part of bencode-tools)</h1>
 
 <ul>
 <li>Type validator is a Python module for validating Python objects from
@@ -37,11 +49,6 @@ messages from network. Message format and type information was validated
 by using the type validator.
 <li> The reference implementation is in public domain (you may do whatever
 you want with the code)
-</ul>
-
-<h2>News</h2>
-<ul>
-<li> <font color="red">2010-06-28: <a href="../typevalidator/typevalidator-2010-06-28.tar.bz2">New version</a> released</font>
 </ul>
 
 <h2>Motivational background</h2>
@@ -68,24 +75,6 @@ you want with the code)
      to test a value
 <li> Bencode was extended with bool type for Python type completeness
 </ul>
-
-<h2>Download type validator</h2>
-Download latest version of type validator
-<a href="../typevalidator/typevalidator-2010-06-28.tar.bz2">here</a>
-or get it from the Git repository: <a href="git://zakalwe.fi/bencode-tools">
-git clone git://zakalwe.fi/bencode-tools</a>
-
-<p>
-List of releases:
-<ul>
-<li> <a href="../typevalidator/typevalidator-2010-06-28.tar.bz2">2010-06-28</a> (<font color="red">newest</font>)
-<li> <a href="../typevalidator/typevalidator-2009-10-09.tar.bz2">2009-10-09</a>
-
-<h2>View type validator source code</h2>
-You can view the latest version of type validator source code
-<a href="typevalidator.py">here</a>,
-and a BSD licensed bencode <a href="bencode.py">here</a>
-(<a href="LICENSE.bencode">bencode license</a>).
 
 <h2>Examples</h2>
 
