web site: Change repo URL [DOCUMENTATION]

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@ into your C module and linking the program with '-lbencodetools'.
 <h2>Download bencode-tools</h2>
 Download latest version of type validator
 <a href="bencode-tools-2011-03-15.tar.bz2">here</a>
-or get it from the Git repository: <a href="git://zakalwe.fi/bencode-tools">
-git clone git://zakalwe.fi/bencode-tools</a>
+or get it from the Git repository: <a href="https://github.com/heikkiorsila/bencode-tools">git clone https://github.com/heikkiorsila/bencode-tools.git</a>
 
 <p>
 List of releases:
